--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -46,12 +46,10 @@
 			<Button Content="{x:Static root:PluginResources.Auth_Cloud_SSO}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					IsEnabled="False"
+					CommandParameter="{x:Static root:AuthenticationType.CloudSSO}"
 					Cursor="Hand"
 					Width="200"
-					Margin="0 8"
-					Visibility="Collapsed" />
+					Margin="0 8"/>
 			<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
@@ -77,6 +75,7 @@
 				<RowDefinition Height="*" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="*" />
+				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 
 			<Grid.ColumnDefinitions>
@@ -84,8 +83,21 @@
 				<ColumnDefinition Width="5*" />
 			</Grid.ColumnDefinitions>
 
+			<StackPanel HorizontalAlignment="Center"
+						Orientation="Horizontal"
+						Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						Grid.ColumnSpan="2"
+						Margin="0 0 0 4">
+				<TextBlock Text="Account region:"
+						   Margin="0" />
+				<RadioButton Content="Europe"
+							 Padding="0" />
+				<RadioButton Content="US"
+							 Padding="0"/>
+			</StackPanel>
+
 			<!-- User ID -->
-			<TextBlock Grid.Row="0"
+			<TextBlock Grid.Row="1"
 					   Grid.Column="0"
 					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
@@ -93,7 +105,7 @@
 					   VerticalAlignment="Center"
 					   Focusable="True" />
 
-			<TextBox Grid.Row="0"
+			<TextBox Grid.Row="1"
 					 Grid.ColumnSpan="2"
 					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
@@ -106,7 +118,7 @@
 			<!-- User ID -->
 
 			<!-- Password -->
-			<TextBlock Grid.Row="1"
+			<TextBlock Grid.Row="2"
 					   Grid.Column="0"
 					   Text="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
@@ -114,7 +126,7 @@
 					   VerticalAlignment="Center"
 					   Focusable="True" />
 
-			<PasswordBox Grid.Row="1"
+			<PasswordBox Grid.Row="2"
 						 Grid.ColumnSpan="2"
 						 x:Name="userPwBox"
 						 PasswordChanged="UserPassword_Changed"
@@ -124,7 +136,7 @@
 			<!-- Password -->
 
 			<!-- Client ID -->
-			<TextBlock Grid.Row="2"
+			<TextBlock Grid.Row="3"
 					   Grid.Column="0"
 					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
@@ -132,7 +144,7 @@
 					   VerticalAlignment="Center"
 					   Focusable="True" />
 
-			<TextBox Grid.Row="2"
+			<TextBox Grid.Row="3"
 					 Grid.ColumnSpan="2"
 					 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
@@ -145,7 +157,7 @@
 			<!-- Client ID -->
 
 			<!-- Client Secret -->
-			<TextBlock Grid.Row="3"
+			<TextBlock Grid.Row="4"
 					   Grid.Column="0"
 					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientSecret}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
@@ -153,7 +165,7 @@
 					   VerticalAlignment="Center"
 					   Focusable="True" />
 
-			<PasswordBox Grid.Row="3"
+			<PasswordBox Grid.Row="4"
 						 Grid.ColumnSpan="2"
 						 x:Name="clientSecretBox"
 						 PasswordChanged="ClientSecret_Changed"
