--- a/InterpretBank/InterpretBank/SettingsService/UI/Controls/Settings.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/Controls/Settings.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="InterpretBank.SettingsService.UI.Settings"
+﻿<UserControl x:Class="InterpretBank.SettingsService.UI.Controls.Settings"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,7 +11,7 @@
 			 d:DesignHeight="450"
 			 d:DesignWidth="800">
 	<UserControl.Resources>
-		<ResourceDictionary Source="../Styles/SettingsResources.xaml" />
+		<ResourceDictionary Source="/InterpretBank;component/SettingsService/Styles/SettingsResources.xaml" />
 	</UserControl.Resources>
 	<Grid>
 		<Grid VerticalAlignment="Top">
