SDLCOM-5148 SDLCOM-5143 SDLCOM-5142 SDLCOM-5141 SDLCOM-5122

--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -39,6 +39,7 @@
 
 			<converters:InvertedBoolean x:Key="InvertedBoolean" />
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+			<converters:EnumToVisibilityConverter x:Key="EnumToVisibility" />
 
 			<DataTemplate DataType="{x:Type cloudViewModel:CloudCredentialsViewModel}">
 				<cloudView:CloudCredentialsView />
@@ -81,18 +82,16 @@
 
 					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
-							 Visibility="{Binding ProviderView.IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudCredentials}}"
 							 Text="You've chosen User Credentials Authentication. Please enter your email and password to proceed."
 							 FontSize="14"
 							 HorizontalAlignment="Center" />
 
 					<StackPanel Grid.Row="0"
-								Visibility="{Binding ProviderView.IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}">
-						<TextBox Grid.Row="0"
-								 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+								Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudSecret}}">
+						<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 								 Cursor="Arrow"
 								 Text="You've chosen Client Secret Authentication. Please provide the generated client secret for access."
-								 Visibility="{Binding ProviderView.IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 								 FontSize="14"
 								 HorizontalAlignment="Center" />
 						<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
@@ -107,8 +106,21 @@
 						</Button>
 					</StackPanel>
 
-					<TextBox Grid.Row="0"
-							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+							 Cursor="Arrow"
+							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeCredentials}}"
+							 Text="You've chosen User Credentials Authentication. Please enter your host, email and password to proceed."
+							 FontSize="14"
+							 HorizontalAlignment="Center" />
+
+					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+							 Cursor="Arrow"
+							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeApiKey}}"
+							 Text="You've chosen User API Key Authentication. Please enter your API Key for access."
+							 FontSize="14"
+							 HorizontalAlignment="Center" />
+
+					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
 							 Text="{x:Static root:PluginResources.MainView_AuthMethods_HelpMessage}"
 							 Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
@@ -163,6 +175,7 @@
 								VerticalAlignment="Bottom">
 						
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWCloud}"
+								ToolTip="{x:Static root:PluginResources.MainView_Buttons_LWCloud_ToolTip}"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.CloudService}"
@@ -171,6 +184,7 @@
 								Margin="0 8" />
 
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWEdge}"
+								ToolTip="{x:Static root:PluginResources.MainView_Buttons_LWEdge_ToolTip}"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.EdgeService}"
