--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -85,7 +85,7 @@
 
 			<StackPanel HorizontalAlignment="Center"
 						Orientation="Horizontal"
-						Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						Visibility="Collapsed"
 						Grid.ColumnSpan="2"
 						Margin="0 0 0 4">
 				<TextBlock Text="Account region:"
@@ -184,15 +184,5 @@
 				Cursor="Hand"
 				Width="200"
 				Margin="0 32 0 8" />
-
-		<Button Grid.Row="3"
-				Grid.ColumnSpan="2"
-				Content="{x:Static root:PluginResources.Auth_ChangeAuthType}"
-				Command="{Binding BackCommand}"
-				Style="{StaticResource Sdl.Button.SecondaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				Cursor="Hand"
-				Width="200"
-				Margin="0 8 0 8" />
 	</Grid>
 </UserControl>
